--- a/GestaoContactos/nbproject/project.properties
+++ b/GestaoContactos/nbproject/project.properties
@@ -4,8 +4,10 @@ browser.highlightselection.Chrome=true
 browser.run=true
 file.reference.Gest_o_de_Contactos-public_html=public_html
 file.reference.Gest_o_de_Contactos-test=test
+file.reference.GestaoContactos-public_html=public_html
+file.reference.GestaoContactos-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.Gest_o_de_Contactos-public_html}
-start.file=Listar.html
-test.folder=${file.reference.Gest_o_de_Contactos-test}
+site.root.folder=${file.reference.GestaoContactos-public_html}
+start.file=index.html
+test.folder=${file.reference.GestaoContactos-test}
 web.context.root=/Gest\u00e3o de Contactos
