--- a/GestaoContactos/nbproject/project.properties
+++ b/GestaoContactos/nbproject/project.properties
@@ -1,6 +1,16 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 browser.autorefresh.Chrome=true
+browser.autorefresh.Chrome.INTEGRATED=true
 browser.highlightselection.Chrome=true
+browser.highlightselection.Chrome.INTEGRATED=true
 browser.run=true
 file.reference.Gest_o_de_Contactos-public_html=public_html
 file.reference.Gest_o_de_Contactos-test=test
@@ -10,4 +20,4 @@ files.encoding=UTF-8
 site.root.folder=${file.reference.GestaoContactos-public_html}
 start.file=index.html
 test.folder=${file.reference.GestaoContactos-test}
-web.context.root=/Gest\u00e3o de Contactos
+web.context.root=/GestaoContactos
